Added Signup page with footer

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Northstar",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/northstar_icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -25,6 +25,18 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "b7318395-4ad3-4446-ad9a-cc9f01858416"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/b7318395-4ad3-4446-ad9a-cc9f01858416"
+    },
+    "managed":false
   }
 }
